--- a/scalecrafter/static/css/index.css
+++ b/scalecrafter/static/css/index.css
@@ -126,7 +126,7 @@ body{
     /*background-color: rgb(43, 60, 197);*/
     /*color: rgb(0, 79, 241);*/
     /*color: white;*/
-    border-top:5px solid rgb(255, 180, 240);
+    /* border-top:5px solid rgb(255, 180, 240); */
     /*border-bottom:5px solid orange;*/
 }
 
@@ -184,6 +184,7 @@ a:after{
   transition:top 200ms cubic-bezier(0, 0.8, 0.13, 1);
   /*background-color: rgba(225, 166, 121, 0.5);*/
   background-color: rgba(255,211,30, 0.4);
+  /* background-color: #974EC3 */
 }
 .emojilink:after{
   background-color: rgba(255,211,30, 0.0) 
